src/test/resources/frontendReference/invalid/semanticErr/class/simple/classBadInitialize.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 20:2 -- Class m is not defined in this scope
